# epidemiology

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: conf.py  index.rst  tutorial.md
docs/api/: calibration.rst  core.rst  io.rst  solvers.rst  viz.rst
src/epidemio_sim/: __init__.py
src/epidemio_sim/calibration/: __init__.py  fit.py  optimizers.py
src/epidemio_sim/core/: __init__.py  epidemic_model.py  models.py  simulation_result.py  sird.py  sird_params.py  sird_vital.py  sird_vital_params.py  types.py
src/epidemio_sim/io/: __init__.py  exporters.py  loaders.py
src/epidemio_sim/solvers/: __init__.py  ode_solver.py
src/epidemio_sim/viz/: __init__.py  plots.py
src/webclient/: __init__.py  server.py
src/webclient/static/: app.js  index.html  style.css
tests/: test_calibration.py  test_models.py  test_optimizers.py  test_regression.py  test_server.py  test_solver.py
